レイアウト修正

--- a/app/views/users/mypage.html.erb
+++ b/app/views/users/mypage.html.erb
@@ -27,9 +27,7 @@
         <li class="nav-item mb-3">
           <%= link_to t('defaults.edit'), edit_mypage_path, class: 'btn btn-outline btn-success' %>
         </li>
-        <li class="nav-item mb-3">
-          <%= link_to t('videos.create'), new_video_path, class: 'btn btn-outline btn-primary' %>
-        </li>
+          <%#= link_to t('videos.create'), new_video_path, class: 'btn btn-outline btn-primary' %>
         <li>
           <%= link_to '会員一覧', admin_users_path(@user), class: 'btn btn-outline' %>
         </li>
