--- a/app/views/users/mypage.html.erb
+++ b/app/views/users/mypage.html.erb
@@ -36,12 +36,12 @@
 
     <!-- 右側コンテンツエリア -->
     <div class="flex-1 flex-auto lg:pr-4 md:pr-2 pr-1">
-      <h1 class="text-xl font-bold mb-4">最新「いいね」した動画</h1>
+      <h1 class="text-xl font-bold mb-4">最新「いいね」した動画プレイリスト</h1>
       <% if @youtube_video_likes.any? %>
-        <div class="mb-4">
-          <% @youtube_video_likes.each do |like| %>
-            <%= render like.likeable %>
-          <% end %>
+        <div class="mb-4 video-wrapper">
+          <iframe class="aspect-video" src="<%= @youtube_playlist_url %>" frameborder="0" allowfullscreen></iframe>
+        </div>
+    </div>
         </div>
       <% else %>
         <p>いいねした動画がありません。</p>
@@ -86,3 +86,20 @@
     </div>
   </div>
 </div>
+
+<style>
+  .video-wrapper {
+    position: relative;
+    padding-top: 56.25%; /* 16:9 Aspect Ratio */
+    height: 0;
+    overflow: hidden;
+  }
+
+  .video-wrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+</style>
