--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -1,4 +1,13 @@
 <div class="container mx-auto px-4 sm:px-6 lg:px-8 w-full">
+    <div class="bg-gradient-to-r from-yellow-400 via-yellow-500 to-yellow-600 text-black p-6 rounded-lg mb-8 shadow-lg transform scale-105 transition duration-300">
+        <h1 class="text-4xl font-extrabold mb-4 text-center">こちらへ移転しました</h1>
+        <p class="text-xl text-center mb-6">新しいサイトにアクセスするには、以下のリンクをクリックしてください:</p>
+        <div class="text-center">
+            <a href="https://vimemo.vercel.app/" class="bg-blue-500 text-white font-bold py-3 px-6 rounded-full hover:bg-blue-700 hover:shadow-xl transition duration-300">新しいサイトはこちら</a>
+        </div>
+    </div>
+    <br><br>
+
     <h1 class="text-3xl font-bold mb-4 text-left">サービス概要</h1>
     <p class="mb-4">動画視聴中に時間軸上で直感的にメモを追加し、共有できるサービスになります。</p>
     
