遷移先変更

--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -3,7 +3,7 @@
         <h1 class="text-4xl font-extrabold mb-4 text-center">こちらへ移転しました</h1>
         <p class="text-xl text-center mb-6">新しいサイトにアクセスするには、以下のリンクをクリックしてください:</p>
         <div class="text-center">
-            <a href="https://vi-memo.com/" class="bg-blue-500 text-white font-bold py-3 px-6 rounded-full hover:bg-blue-700 hover:shadow-xl transition duration-300">新しいサイトはこちら</a>
+            <a href="https://vimemo.vercel.app" class="bg-blue-500 text-white font-bold py-3 px-6 rounded-full hover:bg-blue-700 hover:shadow-xl transition duration-300">新しいサイトはこちら</a>
         </div>
     </div>
     <br><br>
